resolve horizontal scrollbar issue in mobile chat layout

--- a/src/app/components/chat/main-chat.scss
+++ b/src/app/components/chat/main-chat.scss
@@ -19,13 +19,9 @@
 
 app-message-list {
     flex: 1;
-    overflow-y: auto;
     scrollbar-width: thin;
     padding-top: 21px;
 }
-
-
-
 
 
 @media (max-width: 1240px) {
